# Github_Copilot

./: .gitignore  README.md  openapi.yaml  product-requirements.md
.github/: copilot-instructions.md
python/: README.md  app.py  create_venv.ps1  db.py  main.py  openapi.py  pyproject.toml  routes.py  schemas.py  sns_api.db  utils.py
